# RSS-FEEDS-summarizer

./: .env.example  .gitignore  LICENSE  README  README.md  SIMPLE_SETUP.md  app.py  cache_utils.py  categorization.py  categorizer.py  config.py  distributor.py  feed_tester.py  fetcher.py  filter.py  keyword_filter.py  main.py  overall_summary.py  pipeline.py  pyproject.toml  ranking.py  relevance.py  requirements.txt  setup.py  summaries.py  summarizer.py  test_email.py  test_feed.py
cache/: langchain.db
output/: ai_news_2025-05-25.md  ai_news_2025-05-27.md  ai_news_2025-05-28.md  ai_news_2025-05-29.md
rss_feed_summarizer/: __init__.py  categorization.py  cli.py  config.py  distributor.py  fetcher.py  keyword_filter.py  overall_summary.py  pipeline.py  ranking.py  relevance.py  summaries.py
